--- a/index.html
+++ b/index.html
@@ -6,11 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <!-- <title>JS-basics</title> -->
+    <title>Something</title>
 </head>
 
 <body>
-
+    <div class="js-clock">
+        <h1>00:00</h1>
+    </div>
+    <form class="js-greetingForm form">
+        <input type="text" placeholder="What's your name?">
+    </form>
+    <h4 class="js-greeting greeting"></h4>
+    <form class="js-todoForm">
+        <input type="text" placeholder="Write a to do">
+    </form>
+    <ul class="js-toDoList"></ul>
+    <span class="js-weather"></span>
+    <script src="clock.js"></script>
+    <script src="gretting.js"></script>
+    <script src="todo.js"></script>
+    <script src="bg.js"></script>
+    <script src="weather.js"></script>
+    <!-- <script src="index.js"></script> -->
 </body>
 
 </html>
